--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   http: ^0.13.5
   hive_flutter: ^1.1.0
   hive: ^2.2.3
-  cached_network_image: ^3.2.3
+  image_network: ^2.5.2
 
 dev_dependencies:
   flutter_test:
