--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Flutter html render",
+            "name": "web",
             "type": "dart",
             "request": "launch",
             "program": "lib/main.dart",
             "args": [
                 "-d",
                 "chrome",
-
               ]
         },
         {
