--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.3
   image_network: ^2.5.2
+  font_awesome_flutter: ^10.4.0
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
